--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,33 @@
-.App {
-  text-align: center;
-}
+#add-btn{
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
+    background-color: #7ab97a;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.btn{
+    padding:10px;
+    width:100px;
+    color: #f0f8ff;
+    text-transform: uppercase;
+    position: relative;
+    top:20px;
+    left:20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.label{
+    position: relative;
+    top:50px;
+    left:20px;
+    color: grey;
+    font-size: 25px;
+    text-transform:uppercase;
+    font-weight: bolder;
+    font-family: 'Times New Roman', Times, serif;
+}
+.delete-btn{
+    padding:8px;
+    width:80px;
+    color: aliceblue;
+    text-transform: capitalize;
+   border-radius: 5px;
+    background-color: red;
+    font-size:15px;
 }
